Fixed UI and added CSS for ability descriptions
Fixed a cramped UI by adding a third row for stats.
Added CSS for ability descriptions that hyperlink and change font when "description" is hovered.

--- a/style.css
+++ b/style.css
@@ -101,17 +101,45 @@ body {
 .details_row1 {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 15px;
-  margin-top: 50px;
+  justify-content: space-evenly;
+  padding: 10px;
+  margin-top: 30px;
 }
 
 .details_row2 {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 15px;
-  margin-top: 35px;
+  margin-top: 15px;
+}
+
+.details_row3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 10px;
+  margin-top: 15px;
+}
+
+#aLink {
+  font-size: 16px;
+  color: #403b80;
+}
+
+#aLink:hover {
+  font-size: 16px;
+  color: #cc322a;
+}
+
+#haLink {
+  font-size: 16px;
+  color: #403b80;
+}
+
+#haLink:hover {
+  font-size: 16px;
+  color: #cc322a;
 }
 
 p {
